# SignalScope

./: .gitignore  CLAUDE.md  Cargo.toml  DIRECTORS_NOTES.md  README.md
docs/: architecture.md  sensor-model.md
examples/fixtures/wifi/: README.md  system_profiler_associated.xml  system_profiler_no_association.xml  system_profiler_redacted.xml  system_profiler_wifi_off.xml
scripts/: _locate-binary.sh  analyze.sh  record.sh  run.sh
signalscope-analysis/: Cargo.toml
signalscope-analysis/src/: lib.rs  lifecycle.rs  rules.rs  windows.rs
signalscope-core/: Cargo.toml
signalscope-core/src/: bus.rs  clock.rs  lib.rs  logging.rs  series.rs  session.rs  source.rs
signalscope-events/: Cargo.toml
signalscope-events/src/: ids.rs  lib.rs  wifi.rs
signalscope-sensors/: Cargo.toml
signalscope-sensors/src/: dns.rs  gateway.rs  iface.rs  lib.rs  scheduler.rs
signalscope-sensors/src/wifi/: macos.rs  mod.rs
signalscope-sensors/src/wifi/macos/: airport.rs  mod.rs  system_profiler.rs
signalscope-tui/: Cargo.toml
signalscope-tui/src/: app.rs  capture.rs  inspect.rs  landmarks.rs  main.rs  replay.rs  strip.rs  theme.rs  ui.rs  waterfall.rs
