[package]
name = "signalscope-sensors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sensor abstraction + platform adapters that emit normalized observations."

[dependencies]
signalscope-events = { workspace = true }
signalscope-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hickory-resolver = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
plist = { workspace = true }

[target.'cfg(unix)'.dependencies]
socket2 = { workspace = true }
sysinfo = { workspace = true }
